--- a/sidebar/src/app/app.component.html
+++ b/sidebar/src/app/app.component.html
@@ -18,6 +18,27 @@
     <!-- <textarea id="base64" rows="5"></textarea> -->
     <!-- <a download href='#' #link>Download</a> -->
 </div>
+<!-- <form method="post" enctype="multipart/form-data" action="/upload">
+    <table>
+        <tr>
+            <td>Select File</td>
+            <td><input type="file" name="file"></td>
+            <td><button type="submit">Upload</button></td>
+        </tr>
+    </table>
+</form> -->
+
+
+<div class="form-group">
+    <input type=file (change)="fileupload($event)">
+
+    <!-- <input #fileInput type="file" ng2FileSelect [uploader]="uploader" value="upload" />
+
+    <div class="drop-box" ng2FileDrop [uploader]="uploader" (click)="fileClicked()"> -->
+    <!-- <span class="drag-in-title">Import or drag file here</span>
+        <span class="drag-over-title">Drop the file</span> -->
+    <!-- </div> -->
+</div>
 
 <mat-sidenav-container>
     <!-- <mat-sidenav-content class="example-container"> -->
